# xorg-mkcomposecache

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac  mkallcomposecaches.sh  mkcomposecache.c  mkcomposecache.man
doc/: Makefile.am  mkcomposecache.8
doc/CVS/: Entries  Repository  Root  Tag
man/: Makefile.am
